[package]
name = "export-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9"

# Date/Time
chrono = "0.4"

# UUID
uuid = { version = "1", features = ["v4"] }

# Export libraries
rust_xlsxwriter = "0.66"
csv = "1.3"
printpdf = "0.7"
textwrap = "0.16"

# Error handling
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
